<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon = "@drawable/ic_baseline_logout_24_white"
        app:showAsAction="always" />
    <item android:id="@+id/menu_add"
        android:title="@string/add_story"
        android:icon = "@drawable/ic_baseline_add_24_white"
        app:showAsAction="always" />

    <item android:id="@+id/menu_language"
        android:title="@string/language"
        android:icon = "@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_maps"
        android:title="@string/maps"
        android:icon = "@drawable/ic_baseline_location_on_24"
        app:showAsAction="ifRoom" />
</menu>