...
    <string name="img_item_transition_name">img_item</string>
    <string name="name_transition_name">name</string>
    <string name="description_transition_name">description</string>
    <string name="mistake">An error occurred while loading data</string>
    <string name="failed">Failed</string>
    <string name="registration_failed_message">Registration failed.</string>
    <string name="next">Next</string>
    <string name="success">Success</string>
    <string name="register_successful_message">You\'ve registered successfully.</string>
    <string name="login_failed_message">Login failed.</string>
    <string name="login_successful_message">You\'ve login successfully.</string>
    <string name="failed_camera">Failed to show the camera.</string>
    <string name="failed_picture">Failed to show take the picture.</string>
...
